@@ -11,10 +11,29 @@ services:
         - "description=mod_h2 debian sid server"
         - "maintainer=stefan@eissing.org"
     expose:
-      - "5010"
-      - "5011"
+      - "42001"
+      - "42002"
     volumes:
       - mod-h2-debian-sid-data:/apache-httpd/data
+    ports:
+      - "42001"
+      - "42002"
+
+  archlinux:
+    # build and run tests in a debian sid container
+    image: ${DOCKER_REGISTRY}/mod-h2-archlinux:0.0.1
+    container_name: mod-h2-archlinux
+    build:
+      context: .
+      dockerfile: docker/archlinux/Dockerfile
+      labels:
+        - "description=mod_h2 archlinux server"
+        - "maintainer=stefan@eissing.org"
+    expose:
+      - "42001"
+      - "42002"
+    volumes:
+      - mod-h2-archlinux-data:/apache-httpd/data
     ports:
       - "42001"
       - "42002"
@@ -25,4 +44,11 @@ volumes:
     labels:
       - "description=debian sid data for mod_h2"
       - "maintainer=stefan@eissing.org"
+
+  mod-h2-archlinux-data:
+    name: mod-h2-archlinux-data
+    labels:
+      - "description=archlinux data for mod_h2"
+      - "maintainer=stefan@eissing.org"
+
 
